@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/boehm-gc
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boehm-gc/ChangeLog,v 1.77 2011/03/04 14:59:14 jlec Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boehm-gc/ChangeLog,v 1.79 2012/01/10 19:18:00 flameeyes Exp $
+
+  13 Nov 2011; Mike Frysinger <vapier@gentoo.org> boehm-gc-6.8.ebuild,
+  boehm-gc-7.0-r1.ebuild, boehm-gc-7.1-r1.ebuild,
+  boehm-gc-7.2_alpha4-r1.ebuild:
+  Convert USE=nocxx to USE=cxx.
 
 *boehm-gc-7.2_alpha4-r1 (04 Mar 2011)
 *boehm-gc-7.1-r1 (04 Mar 2011)
